2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvement.

2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Peephole renumbering.

2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Remove unused (sdcc lib, regr. tests, contiki OS, libcv, my own programs) peepholes.

2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Fixed #3324913.

2011-06-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed broken use of large return values.

2011-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Restore RFE #3284870, which was lost during the optralloc merge.

2011-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Disallow use of h or l operand in addition when result in true symop.

2011-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc,
	  src/SDCCralloc.hpp,
	  src/SDCClabel.c:
	  Fixed bug #3325223.

2011-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCMain.c:
	  Disable labelIfx() optimization when using --nolabelopt.

2011-06-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/ralloc.c(packRegsDPTRnuse): fixed bug 1665511
	* support/regression/tests/bug1665511.c: new, added

2011-06-19 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: fixed bug #3322383 - Spelling mistakes
	* .version, doc/sdccman.lyx: changed sdcc version to 3.0.4

2011-06-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1962613.c: fixed clash with Bessel functions
	* support/regression/tests/strtok.c: disabled test for GCC on Solaris

2011-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_xd.cc:
	  Fixed bug #3315215.

2011-06-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  src/z80/gen.c:
	  Fixed bug #3315124.
